# graphiti

./: .gitignore  MCP_TOOLS_USAGE_GUIDE.md  deploy.sh  docker-compose.full.yml  pyproject.toml
mcp_client/: Dockerfile  README.md  __init__.py  example_usage.py  pyproject.toml  simple_test.py  test_connection.py  test_tools.py
mcp_client_web/: Dockerfile  README.md  app.py  graphiti_mcp_client.py  pyproject.toml
mcp_client_web/static/: script.js  style.css
mcp_client_web/templates/: base.html  episodes.html  index.html  memory.html  search.html
mcp_server/: docker-compose.yml  graphiti_mcp_server.py  pyproject.toml
