[project]
name = "mcp-client-web"
version = "0.1.0"
description = "Graphiti MCP Web Client"
requires-python = ">=3.10,<4"
dependencies = [
    "flask[async]>=3.0.0",
    "mcp>=1.5.0",
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []